# phd-theses-france

./: .gitignore  LICENSE  README.md  data_dictionary.json  pyproject.toml  requirements_r.R
code/datasets/theses_fr/: __init__.py  theses_fr.py
code/datasets/theses_fr/utils/: __init__.py  download_idref_data.py  download_lexvo_data.py  download_theses_fr_data.py  flatten_dataset.py  improve_gender_completion.py  produce_exhaustive_jury_dataset.py  produce_idref_datatable.py  produce_idref_enriched_dataset.py
code/features/: centrality_features_for_participants.py  count_features.py  identifier_features.py  reposition_and_translate_cols.py  time_features_for_participants.py
data/processed/: .gitignore
data/processed/keep/: idref_corrected_table.csv
docs/: feature_codebook.md
notebooks/plots_tables/: all_plots_and_tables.ipynb
