[project]
name = "phd-theses-france"
version = "1.0.0"
description = "This dataset provides a comprehensive, structured collection of doctoral theses defended in France between 1985 and 2025. Each record corresponds to a single defended PhD thesis and includes detailed information on the thesis itself, the individuals involved (author, supervisors, jury members), and associated institutions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter~=1.1.1",
    "matplotlib~=3.10.0",
    "pandas~=2.2.3",
    "rdflib~=7.1.3",
    "requests~=2.32.3",
    "seaborn~=0.13.2",
    "tqdm~=4.67.1",
    "tabulate>=0.9.0",
    "nomquamgender>=0.1.4",
    "pyarrow>=23.0.1",
]
